--- a/views/dashboard/category/create.hbs
+++ b/views/dashboard/category/create.hbs
@@ -1,7 +1,7 @@
 {{#> dashboard/header title="Categories" }}
 {{/dashboard/header}}
 
-<div class="border-2 border-dashed border-gray-200 rounded-lg h-full p-4">
+<div class="border-2 border-dashed border-gray-100 rounded-sm h-full p-4">
   {{> dashboard/category/form
     title="Category information"
     description="Here you can create your own categories."
