--- a/views/dashboard/index.hbs
+++ b/views/dashboard/index.hbs
@@ -1,7 +1,7 @@
 {{#> dashboard/header title="Dashboard" }}
 {{/dashboard/header}}
 
-<div class="border-4 border-dashed border-gray-200 rounded-lg h-96"></div>
+<div class="border-2 border-dashed border-gray-100 rounded-sm h-96"></div>
 
 {{#> dashboard/footer}}
 {{/dashboard/footer}}
