--- a/views/dashboard/post/edit.hbs
+++ b/views/dashboard/post/edit.hbs
@@ -3,7 +3,7 @@
 <script src="https://cdn.tiny.cloud/1/slp3467c2gikluchlfj97atc38q9a2tf4fb36n1snin5cfxj/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 {{/dashboard/header}}
 
-<div class="border-2 border-dashed border-gray-200 rounded-lg h-full p-4">
+<div class="border-2 border-dashed border-gray-100 rounded-sm h-full p-4">
   {{> dashboard/post/form
     title="Post information"
     description="Here you can create your own posts."
