--- a/views/dashboard/profile/index.hbs
+++ b/views/dashboard/profile/index.hbs
@@ -1,7 +1,7 @@
 {{#> dashboard/header title="My Profile" }}
 {{/dashboard/header}}
 
-<div class="border-2 border-dashed border-gray-200 rounded-lg h-full p-4">
+<div class="border-2 border-dashed border-gray-100 rounded-sm h-full p-4">
 
 </div>
 
