--- a/views/blog/index.hbs
+++ b/views/blog/index.hbs
@@ -7,6 +7,13 @@
       <div class="py-8 w-full text-center">
         <h1 class="text-3xl mb-2">This is my blog!</h1>
         <p class="font-extralight">Bienvenido a mi blog personal! Aquí me gusta escribir sobre el desarrollo de software, compatir mi experiencias y opiniones personales como desarrollador.</p>
+      
+        <div class="mt-4">
+          <a class="text-sm font-semibold hover:text-blue-600" href="#">Ingeniería de Software</a> •
+          <a class="text-sm font-semibold hover:text-blue-600" href="#">NodeJS</a> •
+          <a class="text-sm font-semibold hover:text-blue-600" href="#">Algoritmos</a> •
+          <a class="text-sm font-semibold hover:text-blue-600" href="#">Off-topic</a>
+        </div>
       </div>
 
       <div>
