--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -5,27 +5,27 @@
   <div class="max-w-3xl mx-auto flex">
     <div class="flex-auto md:w-8/12 sm:w-auto">
       <h1 class="text-xl">Vicente's Web Site</h1>
-      <p class="my-4">Hola! me llamo Vicente Gutiérrez y te doy la bienvenida a mi sitio web.</p>
-      <p class="my-4">Soy desarrollador de software y actualmente trabajo principalmente con NodeJS (JavaScript) y Laravel (PHP).</p>
-      <p class="my-4">Del lado derecho encontrarás la forma de contactarme y algunos links a parte de mi trabajo.</p>
+      <p class="font-light my-4">Hola! me llamo Vicente Gutiérrez y te doy la bienvenida a mi sitio web.</p>
+      <p class="font-light my-4">Soy desarrollador de software y actualmente trabajo principalmente con NodeJS (JavaScript) y Laravel (PHP).</p>
+      <p class="font-light my-4">Del lado derecho encontrarás la forma de contactarme y algunos links a parte de mi trabajo.</p>
     </div>
 
     <div class="flex-auto px-8 md:w-4/12 sm:w-auto">
       <ul>
         <li>
-          <a class="hover:text-blue-500" href="/blog">Blog</a>
+          <a class="font-semibold hover:text-blue-600" href="/blog">Blog</a>
         </li>
         <li>
-          <a class="line-through cursor-not-allowed	text-gray-400" href="#">Curriculum</a>
+          <a class="font-semibold line-through cursor-not-allowed	text-gray-400" href="#">Curriculum</a>
         </li>
         <li>
-          <a class="line-through cursor-not-allowed	text-gray-400" href="#">Proyectos</a>
+          <a class="font-semibold line-through cursor-not-allowed	text-gray-400" href="#">Proyectos</a>
         </li>
         <li>
-          <a class="hover:text-blue-600" target="_blank" href="https://github.com/vcgtz">Github</a>
+          <a class="font-semibold hover:text-blue-600" target="_blank" href="https://github.com/vcgtz">Github</a>
         </li>
         <li>
-          <a class="hover:text-blue-600" target="_blank" href="https://www.linkedin.com/in/vicentegtz/">LinkedIn</a>
+          <a class="font-semibold hover:text-blue-600" target="_blank" href="https://www.linkedin.com/in/vicentegtz/">LinkedIn</a>
         </li>
       </ul>
     </div>
@@ -34,7 +34,7 @@
 
 <div class="fixed bottom-0 w-full py-4">
   <p class="text-center">@vcgtz {{#getCurrentYear}}{{/getCurrentYear}}</p>
-  <p class="text-center italic text-sm text-gray-400">Sitio web diseñado bajo los más altos estándares de diseño, de los cuales hasta Steve Jobs estaría orgulloso.</p>
+  <p class="text-center font-light italic text-sm text-gray-400">Sitio web diseñado bajo los más altos estándares de diseño, de los cuales hasta Steve Jobs estaría orgulloso.</p>
 </div>
 
 {{#> home/footer}}
